start unbound dnsbl incl. subdomains

--- a/src/opnsense/service/templates/OPNsense/Unbound/core/blocklists.conf
+++ b/src/opnsense/service/templates/OPNsense/Unbound/core/blocklists.conf
@@ -38,6 +38,7 @@
 {%  if not helpers.empty('OPNsense.unboundplus.dnsbl.enabled') %}
 [settings]
 address={{OPNsense.unboundplus.dnsbl.address|default('0.0.0.0')}}
+blocksubdomains={{OPNsense.unboundplus.dnsbl.blocksubdomains|default(false)|bool|lower}}
 
 [blocklists]
 {%    if not helpers.empty('OPNsense.unboundplus.dnsbl.type') %}
